--- a/requirements.txt
+++ b/requirements.txt
@@ -19,17 +19,21 @@ multidict==6.0.4
 numpy==1.24.3
 oauthlib==3.2.2
 openpyxl==3.1.2
+pandas==2.0.2
 protobuf==4.23.1
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pydantic==1.10.7
 pygsheets==2.0.6
 pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
 requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
 typing_extensions==4.5.0
+tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.15
 yarl==1.9.2
